--- a/proyectos.html
+++ b/proyectos.html
@@ -75,7 +75,7 @@
             <a href="#videoCardsSection"><i class="fa-solid fa-angles-down iArrow"></i></a>
         </div>
 
-        <div class="d-flex videoCardsMain row row-cols-4" id="videoCardsSection">
+        <div class="d-flex videoCardsMain row row-cols-xl-4" id="videoCardsSection">
             <a href="https://www.youtube.com/watch?v=l8ubniqiyXc" target="_blank"><img src="img/NegrataEntreCuatroParedes0.png" class="img-fluid"></a>
             <a href="https://www.youtube.com/watch?v=vHl3L5Gmiw0" target="_blank"><img src="img/Fabri888Yo0.png" class="img-fluid"></a>
             <a href="https://www.youtube.com/watch?v=kgDxc7mSi9w&ab_channel=DavRo" target="_blank"><img src="img/BandejaDeChocolatesDavRo.png" class="img-fluid"></a>
