js images,fix precioshtml

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body id="body">
+<body id="body" class="bodyNegro">
 
     <header class="d-flex align-items-center">
         <div class="icono-menu d-flex justify-content-center align-items-center">
