--- a/proyectos.html
+++ b/proyectos.html
@@ -76,18 +76,7 @@
         </div>
 
         <div class="d-flex videoCardsMain row row-cols-xl-4" id="videoCardsSection">
-            <a href="https://www.youtube.com/watch?v=l8ubniqiyXc" target="_blank"><img src="img/NegrataEntreCuatroParedes0.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=vHl3L5Gmiw0" target="_blank"><img src="img/Fabri888Yo0.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=kgDxc7mSi9w&ab_channel=DavRo" target="_blank"><img src="img/BandejaDeChocolatesDavRo.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=dPLos39ZQio&ab_channel=WAVE" target="_blank"><img src="img/SoulWave.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=o28AthGeHLQ&ab_channel=Uziwalker" target="_blank"><img src="img/FiatUnoUzi.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=vHl3L5Gmiw0&ab_channel=FABRI888" target="_blank"><img src="img/RockstarFabri888.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=EizXdyfPRkE&ab_channel=ScottWRLD" target="_blank"><img src="img/ScottSumar.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=ypCigWdiq7Y&ab_channel=Tita-COficial" target="_blank"><img src="img/TitaTripleS.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=4_vJp4SRsX0&ab_channel=MatuuGt" target="_blank"><img src="img/MatuRunAway.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=aGupPe_L1jc" target="_blank"><img src="img/JontinyAbusadora.png" class="img-fluid"></a>
-            <a href="https://www.youtube.com/watch?v=4h_hag5iBtA" target="_blank"><img src="img/BrodyLejosDeTi.png" class="img-fluid"></a>
-
+            <!-- CARDS DESDE JS -->
         </div>
     </main>
 
